# fred-rag-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  embedder.py  ingest.py  llm.py  main.py  retriever.py
